feat: Add promotions system with auto-discount calculation
- Extended Product model with 7 promotion fields (promotionPrice, isPromotion, promotionLabel, promotionLabelTranslations, promotionDiscount, promotionStartDate, promotionEndDate)
- Added auto-calculation: promotionPrice < price triggers automatic discount % calculation and auto-enables promotion
- Created /promociones page with filtering by active dates and status
- Added promotion badges to product cards (grid/list views) with bronze theme
- Implemented multi-language promotion labels (ES/EN/FR/IT)
- Added promotion fields to admin product forms (main and quick-add)
- Added navigation links to /promociones in navbar (desktop/mobile)
- Hidden all product prices from public-facing pages (productos, detalle, cards)
- Fixed logo loading issue with skeleton placeholder
- Updated product detail and card components to support promotion display
- Synchronized FirestoreProduct interface with Product model
- Added Firestore composite index for promotion queries

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,6 +2,7 @@
   "nav": {
     "home": "Home",
     "products": "Products",
+    "promotions": "Promotions",
     "gallery": "Gallery",
     "technical": "Technical Data",
     "contact": "Contact",
@@ -284,6 +285,10 @@
     "no_account": "Don't have an account?",
     "already_have_account": "Already have an account?",
     "forgot_password": "Forgot your password?",
+    "reset_password_instructions": "Enter your email address and we'll send you a link to reset your password.",
+    "send_reset_link": "Send Reset Link",
+    "reset_email_sent": "Email Sent!",
+    "reset_email_instructions": "We've sent a recovery link to your email. Check your inbox and follow the instructions.",
     "show_password": "Show password",
     "hide_password": "Hide password",
     "personal_information": "Personal Information",
@@ -299,14 +304,15 @@
     "order_number": "Order Number",
     "order_date": "Date",
     "order_status": "Status",
+    "order_total": "Total",
+    "order_message": "Order message",
     "quantity": "Quantity",
     "tracking": "Tracking",
     "shipping_address": "Shipping Address",
     "all_orders": "All",
     "pending": "Pending",
-    "processing": "Processing",
-    "shipped": "Shipped",
-    "delivered": "Delivered",
+    "in_progress": "In Progress",
+    "completed": "Completed",
     "cancelled": "Cancelled",
     "no_orders": "You have no orders",
     "no_orders_description": "Start exploring our products and place your first order",
@@ -331,6 +337,7 @@
       "name_required": "Name is required",
       "name_min_length": "Name must be at least 3 characters",
       "passwords_dont_match": "Passwords don't match",
+      "reset_failed": "Failed to send recovery email",
       "load_profile_failed": "Failed to load profile",
       "update_profile_failed": "Failed to update profile",
       "load_orders_failed": "Failed to load orders"
@@ -566,7 +573,23 @@
     "next": "Next",
     "previous": "Previous",
     "search": "Search",
-    "download": "Download"
+    "download": "Download",
+    "item": "item",
+    "items": "items"
+  },
+  "promotions": {
+    "tag": "Special Offers",
+    "title": "Promotions",
+    "subtitle": "Discover our special offers on high-quality porcelain surfaces",
+    "see_all_products": "See all products",
+    "no_promotions": "No active promotions",
+    "no_promotions_description": "We currently have no promotions available. Check out our complete product collection.",
+    "browse_products": "Browse Products",
+    "products_title": "Products on Sale",
+    "showing_count": "Showing {{count}} product(s) on offer",
+    "newsletter_title": "Want to receive our offers?",
+    "newsletter_description": "Contact us to receive information about our exclusive promotions and product launches.",
+    "contact_us": "Contact Us"
   },
   "footer": {
     "default_site_name": "TopStone",
