--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -2,6 +2,7 @@
   "nav": {
     "home": "Inicio",
     "products": "Productos",
+    "promotions": "Promociones",
     "gallery": "Galería",
     "technical": "Datos Técnicos",
     "contact": "Contacto",
@@ -284,6 +285,10 @@
     "no_account": "¿No tienes cuenta?",
     "already_have_account": "¿Ya tienes cuenta?",
     "forgot_password": "¿Olvidaste tu contraseña?",
+    "reset_password_instructions": "Ingresa tu correo electrónico y te enviaremos un enlace para restablecer tu contraseña.",
+    "send_reset_link": "Enviar Enlace",
+    "reset_email_sent": "¡Correo Enviado!",
+    "reset_email_instructions": "Hemos enviado un enlace de recuperación a tu correo. Revisa tu bandeja de entrada y sigue las instrucciones.",
     "show_password": "Mostrar contraseña",
     "hide_password": "Ocultar contraseña",
     "personal_information": "Información Personal",
@@ -299,14 +304,15 @@
     "order_number": "Número de Pedido",
     "order_date": "Fecha",
     "order_status": "Estado",
+    "order_total": "Total",
+    "order_message": "Mensaje del pedido",
     "quantity": "Cantidad",
     "tracking": "Seguimiento",
     "shipping_address": "Dirección de Envío",
     "all_orders": "Todos",
     "pending": "Pendiente",
-    "processing": "En Proceso",
-    "shipped": "Enviado",
-    "delivered": "Entregado",
+    "in_progress": "En Proceso",
+    "completed": "Completado",
     "cancelled": "Cancelado",
     "no_orders": "No tienes pedidos",
     "no_orders_description": "Comienza a explorar nuestros productos y realiza tu primer pedido",
@@ -331,6 +337,7 @@
       "name_required": "El nombre es obligatorio",
       "name_min_length": "El nombre debe tener al menos 3 caracteres",
       "passwords_dont_match": "Las contraseñas no coinciden",
+      "reset_failed": "Error al enviar el correo de recuperación",
       "load_profile_failed": "Error al cargar el perfil",
       "update_profile_failed": "Error al actualizar el perfil",
       "load_orders_failed": "Error al cargar los pedidos"
@@ -607,7 +614,23 @@
     "next": "Siguiente",
     "previous": "Anterior",
     "search": "Buscar",
-    "download": "Descargar"
+    "download": "Descargar",
+    "item": "producto",
+    "items": "productos"
+  },
+  "promotions": {
+    "tag": "Ofertas Especiales",
+    "title": "Promociones",
+    "subtitle": "Descubre nuestras ofertas especiales en superficies porcelánicas de alta calidad",
+    "see_all_products": "Ver todos los productos",
+    "no_promotions": "No hay promociones activas",
+    "no_promotions_description": "Actualmente no tenemos promociones disponibles. Consulta nuestra colección completa de productos.",
+    "browse_products": "Explorar Productos",
+    "products_title": "Productos en Promoción",
+    "showing_count": "Mostrando {{count}} producto(s) en oferta",
+    "newsletter_title": "¿Quieres recibir nuestras ofertas?",
+    "newsletter_description": "Contáctanos para recibir información sobre nuestras promociones exclusivas y lanzamientos de productos.",
+    "contact_us": "Contáctanos"
   },
   "footer": {
     "default_site_name": "TopStone",
