--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -2,6 +2,7 @@
   "nav": {
     "home": "Accueil",
     "products": "Produits",
+    "promotions": "Promotions",
     "gallery": "Galerie",
     "technical": "Données Techniques",
     "contact": "Contact",
@@ -284,6 +285,10 @@
     "no_account": "Vous n'avez pas de compte?",
     "already_have_account": "Vous avez déjà un compte?",
     "forgot_password": "Mot de passe oublié?",
+    "reset_password_instructions": "Entrez votre adresse e-mail et nous vous enverrons un lien pour réinitialiser votre mot de passe.",
+    "send_reset_link": "Envoyer le lien",
+    "reset_email_sent": "E-mail envoyé!",
+    "reset_email_instructions": "Nous avons envoyé un lien de récupération à votre e-mail. Vérifiez votre boîte de réception et suivez les instructions.",
     "show_password": "Afficher le mot de passe",
     "hide_password": "Masquer le mot de passe",
     "personal_information": "Informations Personnelles",
@@ -298,15 +303,14 @@
     "order": "Commande",
     "order_number": "Numéro de Commande",
     "order_date": "Date",
-    "order_status": "Statut",
-    "quantity": "Quantité",
+    "order_status": "Statut",    "order_total": "Total",
+    "order_message": "Message de la commande",    "quantity": "Quantité",
     "tracking": "Suivi",
     "shipping_address": "Adresse de Livraison",
     "all_orders": "Toutes",
     "pending": "En Attente",
-    "processing": "En Cours",
-    "shipped": "Expédié",
-    "delivered": "Livré",
+    "in_progress": "En cours",
+    "completed": "Terminé",
     "cancelled": "Annulé",
     "no_orders": "Vous n'avez aucune commande",
     "no_orders_description": "Commencez à explorer nos produits et passez votre première commande",
@@ -331,6 +335,7 @@
       "name_required": "Le nom est obligatoire",
       "name_min_length": "Le nom doit contenir au moins 3 caractères",
       "passwords_dont_match": "Les mots de passe ne correspondent pas",
+      "reset_failed": "Échec de l'envoi de l'e-mail de récupération",
       "load_profile_failed": "Échec du chargement du profil",
       "update_profile_failed": "Échec de la mise à jour du profil",
       "load_orders_failed": "Échec du chargement des commandes"
@@ -479,9 +484,23 @@
     "next": "Suivant",
     "previous": "Précédent",
     "search": "Rechercher",
-    "download": "Télécharger"
-  },
-  "footer": {
+    "download": "Télécharger",
+    "item": "article",
+    "items": "articles"
+  },  "promotions": {
+    "tag": "Offres Spéciales",
+    "title": "Promotions",
+    "subtitle": "Découvrez nos offres spéciales sur les surfaces en porcelaine de haute qualité",
+    "see_all_products": "Voir tous les produits",
+    "no_promotions": "Aucune promotion active",
+    "no_promotions_description": "Nous n'avons actuellement aucune promotion disponible. Consultez notre collection complète de produits.",
+    "browse_products": "Explorer les Produits",
+    "products_title": "Produits en Promotion",
+    "showing_count": "Affichage de {{count}} produit(s) en promotion",
+    "newsletter_title": "Voulez-vous recevoir nos offres?",
+    "newsletter_description": "Contactez-nous pour recevoir des informations sur nos promotions exclusives et nos lancements de produits.",
+    "contact_us": "Nous Contacter"
+  },  "footer": {
     "default_site_name": "TopStone",
     "default_tagline": "Des surfaces en grès cérame grand format qui subliment chaque projet grâce au design, à la résistance et à la polyvalence.",
     "default_email": "info@topstone.com",
