--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -2,6 +2,7 @@
   "nav": {
     "home": "Home",
     "products": "Prodotti",
+    "promotions": "Promozioni",
     "gallery": "Galleria",
     "technical": "Dati Tecnici",
     "contact": "Contatto",
@@ -284,6 +285,10 @@
     "no_account": "Non hai un account?",
     "already_have_account": "Hai già un account?",
     "forgot_password": "Hai dimenticato la password?",
+    "reset_password_instructions": "Inserisci il tuo indirizzo email e ti invieremo un link per reimpostare la password.",
+    "send_reset_link": "Invia Link",
+    "reset_email_sent": "Email Inviata!",
+    "reset_email_instructions": "Abbiamo inviato un link di recupero alla tua email. Controlla la posta in arrivo e segui le istruzioni.",
     "show_password": "Mostra password",
     "hide_password": "Nascondi password",
     "personal_information": "Informazioni Personali",
@@ -298,15 +303,14 @@
     "order": "Ordine",
     "order_number": "Numero Ordine",
     "order_date": "Data",
-    "order_status": "Stato",
-    "quantity": "Quantità",
+    "order_status": "Stato",    "order_total": "Totale",
+    "order_message": "Messaggio dell'ordine",    "quantity": "Quantità",
     "tracking": "Tracciamento",
     "shipping_address": "Indirizzo di Spedizione",
     "all_orders": "Tutti",
     "pending": "In Attesa",
-    "processing": "In Elaborazione",
-    "shipped": "Spedito",
-    "delivered": "Consegnato",
+    "in_progress": "In corso",
+    "completed": "Completato",
     "cancelled": "Annullato",
     "no_orders": "Non hai ordini",
     "no_orders_description": "Inizia a esplorare i nostri prodotti e effettua il tuo primo ordine",
@@ -331,6 +335,7 @@
       "name_required": "Il nome è obbligatorio",
       "name_min_length": "Il nome deve contenere almeno 3 caratteri",
       "passwords_dont_match": "Le password non corrispondono",
+      "reset_failed": "Impossibile inviare l'email di recupero",
       "load_profile_failed": "Caricamento profilo fallito",
       "update_profile_failed": "Aggiornamento profilo fallito",
       "load_orders_failed": "Caricamento ordini fallito"
@@ -479,9 +484,23 @@
     "next": "Successivo",
     "previous": "Precedente",
     "search": "Cerca",
-    "download": "Scarica"
-  },
-  "footer": {
+    "download": "Scarica",
+    "item": "articolo",
+    "items": "articoli"
+  },  "promotions": {
+    "tag": "Offerte Speciali",
+    "title": "Promozioni",
+    "subtitle": "Scopri le nostre offerte speciali su superfici in porcellana di alta qualità",
+    "see_all_products": "Vedi tutti i prodotti",
+    "no_promotions": "Nessuna promozione attiva",
+    "no_promotions_description": "Al momento non abbiamo promozioni disponibili. Consulta la nostra collezione completa di prodotti.",
+    "browse_products": "Esplora i Prodotti",
+    "products_title": "Prodotti in Promozione",
+    "showing_count": "Visualizzazione di {{count}} prodotto/i in offerta",
+    "newsletter_title": "Vuoi ricevere le nostre offerte?",
+    "newsletter_description": "Contattaci per ricevere informazioni sulle nostre promozioni esclusive e sui lanci di prodotti.",
+    "contact_us": "Contattaci"
+  },  "footer": {
     "default_site_name": "TopStone",
     "default_tagline": "Superfici in gres porcellanato di grande formato che valorizzano ogni progetto con design, resistenza e versatilità.",
     "default_email": "info@topstone.com",
